tests/grammar/schema/deprecated/unknown_fail_0/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/main.k:4:6
  |
4 |     @err_deprecated(version="1.16", reason="use firstName and lastName instead", strict=False)
  |      ^ UnKnown decorator err_deprecated
  |